force-app/main/default/objects/OM_SAC_lineasDeCentro__c/OM_SAC_lineasDeCentro__c.object-meta.xml
<CustomObject>
    <label>Lineas de Centro</label>
    <nameField>
        <label>Línea de centro Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lineas de Centro</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>