force-app/main/default/objects/OM_SAC_lineasDeCentro__c/fields/OM_SAC_Account__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Lineas de Centro</relationshipLabel>
    <relationshipName>Lineas_de_Centro</relationshipName>
    <type>Lookup</type>
</CustomField>