force-app/main/default/objects/OM_SAC_lineasDeCentro__c/fields/OM_SAC_alturaMaximaDespaletizado__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_alturaMaximaDespaletizado__c</fullName>
    <label>Altura máxima despaletizado (mm)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>