force-app/main/default/objects/OM_SAC_lineasDeCentro__c/fields/OM_SAC_bienescalonado__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_bienescalonado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bien escalonado</label>
    <type>Checkbox</type>
</CustomField>