force-app/main/default/objects/OM_SAC_lineasDeCentro__c/fields/OM_SAC_calentamiento__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_calentamiento__c</fullName>
    <label>Calentamiento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ducha de agua</fullName>
            </value>
            <value>
                <fullName>Vapor directo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>