force-app/main/default/objects/OM_SAC_lineasDeCentro__c/fields/OM_SAC_conPrecalentamiento__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_conPrecalentamiento__c</fullName>
    <defaultValue>true</defaultValue>
    <label>¿Con precalentamiento?</label>
    <type>Checkbox</type>
</CustomField>