force-app/main/default/objects/OM_SAC_lineasDeCentro__c/fields/OM_SAC_dimensionesetiquetatraserappal__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_dimensionesetiquetatraserappal__c</fullName>
    <label>Dimensiones etiqueta trasera ppal</label>
    <length>100</length>
    <type>Text</type>
</CustomField>