force-app/main/default/objects/OM_SAC_lineasDeCentro__c/fields/OM_SAC_donde__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_donde__c</fullName>
    <label>¿Dónde?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>