force-app/main/default/objects/OM_SAC_lineasDeCentro__c/fields/OM_SAC_dondeencapsula__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_dondeencapsula__c</fullName>
    <label>Dónde encapsula</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En máquina independiente</fullName>
            </value>
            <value>
                <fullName>En taponadora</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>