force-app/main/default/objects/OM_SAC_lineasDeCentro__c/fields/OM_SAC_enfriamiento__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_enfriamiento__c</fullName>
    <label>Enfriamiento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chorros de agua</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>