force-app/main/default/objects/OM_SAC_lineasDeCentro__c/fields/OM_SAC_equipodevolteado__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_equipodevolteado__c</fullName>
    <label>Equipo de volteado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Giratorio</fullName>
            </value>
            <value>
                <fullName>Lineal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>