force-app/main/default/objects/OM_SAC_lineasDeCentro__c/fields/OM_SAC_estabilidaddelasbotellasenlinea__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_estabilidaddelasbotellasenlinea__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Estabilidad de las botellas en línea</label>
    <type>Checkbox</type>
</CustomField>