force-app/main/default/objects/OM_SAC_lineasDeCentro__c/fields/OM_SAC_etiquetaautoadhesiva__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_etiquetaautoadhesiva__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Etiqueta autoadhesiva</label>
    <type>Checkbox</type>
</CustomField>