force-app/main/default/objects/OM_SAC_lineasDeCentro__c/fields/OM_SAC_etiquetapapelcola__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_etiquetapapelcola__c</fullName>
    <label>Etiqueta papel + cola</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cola caliente / fría</fullName>
            </value>
            <value>
                <fullName>Fabricante cola</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>