force-app/main/default/objects/OM_SAC_lineasDeCentro__c/fields/OM_SAC_fabricantedelequipollenadora__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_fabricantedelequipollenadora__c</fullName>
    <label>Fabricante del equipo llenadora</label>
    <length>100</length>
    <type>Text</type>
</CustomField>