force-app/main/default/objects/OM_SAC_lineasDeCentro__c/fields/OM_SAC_fabricantepaletizadora__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_fabricantepaletizadora__c</fullName>
    <label>Fabricante paletizadora</label>
    <length>100</length>
    <type>Text</type>
</CustomField>