force-app/main/default/objects/OM_SAC_lineasDeCentro__c/fields/OM_SAC_Fotografia_Taponadora__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_Fotografia_Taponadora__c</fullName>
    <label>Fotografía taponadora</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>