force-app/main/default/objects/OM_SAC_lineasDeCentro__c/fields/OM_SAC_Fotografias_EncaPale__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_Fotografias_EncaPale__c</fullName>
    <label>Fotografías encajadora y paleitzadora</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>