force-app/main/default/objects/OM_SAC_lineasDeCentro__c/fields/OM_SAC_hayacumulaciones__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_hayacumulaciones__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Hay acumulaciones?</label>
    <type>Checkbox</type>
</CustomField>