force-app/main/default/objects/OM_SAC_lineasDeCentro__c/fields/OM_SAC_haypendienteseneltransporte__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_haypendienteseneltransporte__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Hay pendientes en el transporte?</label>
    <type>Checkbox</type>
</CustomField>