force-app/main/default/objects/OM_SAC_lineasDeCentro__c/fields/OM_SAC_impactosenalgunpuntodelalinea__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_impactosenalgunpuntodelalinea__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Impactos en algún punto de la línea?</label>
    <type>Checkbox</type>
</CustomField>