force-app/main/default/objects/OM_SAC_lineasDeCentro__c/fields/OM_SAC_indicardonde__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_indicardonde__c</fullName>
    <label>Indicar dónde</label>
    <length>100</length>
    <type>Text</type>
</CustomField>