force-app/main/default/objects/OM_SAC_lineasDeCentro__c/fields/OM_SAC_intercaladores__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_intercaladores__c</fullName>
    <label>Intercaladores</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CPL</fullName>
            </value>
            <value>
                <fullName>BN</fullName>
            </value>
            <value>
                <fullName>BI</fullName>
            </value>
            <value>
                <fullName>IC</fullName>
            </value>
            <value>
                <fullName>AKYLUX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>