force-app/main/default/objects/OM_SAC_lineasDeCentro__c/fields/OM_SAC_limpiezapor__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_limpiezapor__c</fullName>
    <label>Limpieza por</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agua</fullName>
            </value>
            <value>
                <fullName>Aire</fullName>
            </value>
            <value>
                <fullName>Producto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>