force-app/main/default/objects/OM_SAC_lineasDeCentro__c/fields/OM_SAC_lineasdeencajado__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_lineasdeencajado__c</fullName>
    <label>Líneas de encajado</label>
    <length>100</length>
    <type>Text</type>
</CustomField>