force-app/main/default/objects/OM_SAC_lineasDeCentro__c/fields/OM_SAC_llenadoencaliente__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_llenadoencaliente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Llenado en caliente</label>
    <type>Checkbox</type>
</CustomField>