force-app/main/default/objects/OM_SAC_lineasDeCentro__c/fields/OM_SAC_llenadoporpesovolumetria__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_llenadoporpesovolumetria__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Llenado por peso / volumetría</label>
    <type>Checkbox</type>
</CustomField>