force-app/main/default/objects/OM_SAC_lineasDeCentro__c/fields/OM_SAC_llenadoraanivel__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_llenadoraanivel__c</fullName>
    <label>Llenadora a nivel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cánula</fullName>
            </value>
            <value>
                <fullName>Fotocélula</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>