force-app/main/default/objects/OM_SAC_lineasDeCentro__c/fields/OM_SAC_llenadoraarebose__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_llenadoraarebose__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Llenadora a rebose</label>
    <type>Checkbox</type>
</CustomField>