force-app/main/default/objects/OM_SAC_lineasDeCentro__c/fields/OM_SAC_modelosimplicados__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_modelosimplicados__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Modelos implicados</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Lineas</relationshipName>
    <type>Lookup</type>
</CustomField>