force-app/main/default/objects/OM_SAC_lineasDeCentro__c/fields/OM_SAC_ndeestacionesdellenado__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_ndeestacionesdellenado__c</fullName>
    <label>Nº de estaciones de llenado</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>