force-app/main/default/objects/OM_SAC_lineasDeCentro__c/fields/OM_SAC_nEstacionesEncapsulado__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_nEstacionesEncapsulado__c</fullName>
    <label>Nº Estaciones encapsulado</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>