force-app/main/default/objects/OM_SAC_lineasDeCentro__c/fields/OM_SAC_netiquetadorasvelocidad__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_netiquetadorasvelocidad__c</fullName>
    <label>Nº etiquetadoras / Velocidad</label>
    <length>100</length>
    <type>Text</type>
</CustomField>