force-app/main/default/objects/OM_SAC_lineasDeCentro__c/fields/OM_SAC_productoembotellado__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_productoembotellado__c</fullName>
    <label>Producto embotellado</label>
    <length>100</length>
    <type>Text</type>
</CustomField>