force-app/main/default/objects/OM_SAC_lineasDeCentro__c/fields/OM_SAC_quitaflejes__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_quitaflejes__c</fullName>
    <label>Quita flejes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automático</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>