force-app/main/default/objects/OM_SAC_lineasDeCentro__c/fields/OM_SAC_seAplicaCalorALasCapsulas__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_seAplicaCalorALasCapsulas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Se aplica calor a las cápsulas</label>
    <type>Checkbox</type>
</CustomField>