force-app/main/default/objects/OM_SAC_lineasDeCentro__c/fields/OM_SAC_taponadoconvacioN2__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_taponadoconvacioN2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Taponado con vacío / N2</label>
    <type>Checkbox</type>
</CustomField>