force-app/main/default/objects/OM_SAC_lineasDeCentro__c/fields/OM_SAC_temperaturasalida__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_temperaturasalida__c</fullName>
    <label>Temperatura salida</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>