force-app/main/default/objects/OM_SAC_lineasDeCentro__c/fields/OM_SAC_tipodepasteurizado__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_tipodepasteurizado__c</fullName>
    <label>Tipo de pasteurizado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Túnel</fullName>
            </value>
            <value>
                <fullName>Flash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>