force-app/main/default/objects/OM_SAC_lineasDeCentro__c/fields/OM_SAC_tipodeposicionado__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_tipodeposicionado__c</fullName>
    <label>Tipo de posicionado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mecánico</fullName>
            </value>
            <value>
                <fullName>Óptico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>