force-app/main/default/objects/OM_SAC_lineasDeCentro__c/fields/OM_SAC_tipodespaletizado__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_tipodespaletizado__c</fullName>
    <label>Tipo despaletizado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fuelles</fullName>
            </value>
            <value>
                <fullName>Arrastre</fullName>
            </value>
            <value>
                <fullName>Semiautomática</fullName>
            </value>
            <value>
                <fullName>Automática</fullName>
            </value>
            <value>
                <fullName>Despaletizado manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>