force-app/main/default/objects/OM_SAC_lineasDeCentro__c/fields/OM_SAC_tipodetaponadora__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_tipodetaponadora__c</fullName>
    <label>Tipo de taponadora</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corcho</fullName>
            </value>
            <value>
                <fullName>Tapón sintético</fullName>
            </value>
            <value>
                <fullName>Tapón corona</fullName>
            </value>
            <value>
                <fullName>Tapón rosca</fullName>
            </value>
            <value>
                <fullName>Tapón rosca con vertedero</fullName>
            </value>
            <value>
                <fullName>Twist-off</fullName>
            </value>
            <value>
                <fullName>Cápsulas metálicas/plásticas</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>