force-app/main/default/objects/OM_SAC_lineasDeCentro__c/fields/OM_SAC_tipopalets__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_tipopalets__c</fullName>
    <label>Tipo palets</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VMF</fullName>
            </value>
            <value>
                <fullName>ANIFE</fullName>
            </value>
            <value>
                <fullName>DIN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>