force-app/main/default/objects/OM_SAC_lineasDeCentro__c/fields/OM_SAC_unicoformatomultiformato__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_unicoformatomultiformato__c</fullName>
    <label>Único formato / Multiformato</label>
    <length>100</length>
    <type>Text</type>
</CustomField>