force-app/main/default/objects/OM_SAC_lineasDeCentro__c/fields/OM_SAC_velocidaddelalinea__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_velocidaddelalinea__c</fullName>
    <label>Velocidad de la línea</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>